Text note activity

--- a/mobile/FridgyNote/app/src/main/AndroidManifest.xml
+++ b/mobile/FridgyNote/app/src/main/AndroidManifest.xml
@@ -33,9 +33,11 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"></activity>
-        <activity android:name=".activities.NewTagActivity"
-            android:label="New Tag"></activity>
+            android:label="@string/title_activity_main" />
+        <activity
+            android:name=".activities.NewTagActivity"
+            android:label="New Tag" />
+        <activity android:name=".activities.TextNoteActivity"></activity>
     </application>
 
 </manifest>
