Edit Text Note Activity

--- a/mobile/FridgyNote/app/src/main/AndroidManifest.xml
+++ b/mobile/FridgyNote/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".activities.TextNoteActivity" />
         <activity android:name=".activities.ListNoteActivity" />
         <activity android:name=".activities.TagNotesActivity" />
+        <activity android:name=".activities.EditTextNoteActivity"></activity>
     </application>
 
 </manifest>
