Edit List Note UI

--- a/mobile/FridgyNote/app/src/main/AndroidManifest.xml
+++ b/mobile/FridgyNote/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
         <activity android:name=".activities.TextNoteActivity" />
         <activity android:name=".activities.ListNoteActivity" />
         <activity android:name=".activities.TagNotesActivity" />
-        <activity android:name=".activities.EditTextNoteActivity"></activity>
+        <activity android:name=".activities.EditTextNoteActivity" />
+        <activity android:name=".activities.EditListNoteActivity"></activity>
     </application>
 
 </manifest>
