--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-validator": "^5.1.2",
+    "fs": "0.0.1-security",
     "mongoose": "^5.0.14",
     "morgan": "~1.9.0",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "path": "^0.12.7"
   }
 }
