--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.0.14",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ws": "^5.1.1"
   }
 }
